--- a/src/app/banner/banner.html
+++ b/src/app/banner/banner.html
@@ -11,7 +11,7 @@
 
             <h1
                 class="mt-20 lg:mt-0 text-4xl md:text-5xl lg:text-[3.5rem] font-extrabold text-gray-900 leading-[1.1] tracking-tight">
-                A <span class="text-[#009b9f]">ÚNICA PLATAFORMA</span> <br class="hidden lg:block">
+                A <span class="text-[#008e90]">ÚNICA PLATAFORMA</span> <br class="hidden lg:block">
                 multicálculo de RC <br class="hidden lg:block"> Profissional do Brasil
             </h1>
 
@@ -31,7 +31,7 @@
             </div>
         </div>
 
-        <div class="relative w-full flex items-center justify-center lg:-mr-16 lg:mt-24">
+        <div class="relative w-full flex items-center justify-center lg:-mr-16 lg:mt-14">
 
             <img src="imgs/notebook.png"
                 class="relative z-10 w-full max-w-lg md:max-w-2xl lg:w-[130%] lg:max-w-none shrink-0 h-auto object-contain drop-shadow-2xl transform hover:-translate-y-2 transition-transform duration-500"
