--- a/src/app/depoimentos/depoimentos.html
+++ b/src/app/depoimentos/depoimentos.html
@@ -1,7 +1,7 @@
 <section class="pt-8 pb-24 px-8 bg-gradient-to-b from-white to-[#eaf6f7] text-center">
 
     <h2 class="text-4xl md:text-5xl font-extrabold text-gray-900 mb-16 tracking-tight leading-tight">
-        Depoimentos de quem já <br> se beneficiou da <span class="text-[#009b9f]">RC<span
+        Depoimentos de quem já <br> se beneficiou da <span class="text-[#008e90]">RC<span
                 class="text-[#f05a10]">4</span>VC</span>
     </h2>
 
@@ -17,7 +17,7 @@
                     <div
                         class="bg-white p-8 rounded-3xl shadow-lg border border-gray-100 text-left flex flex-col relative h-full transition-transform hover:-translate-y-2 duration-300 min-h-[300px]">
                         <span [class]="item.highlight ? 'text-[#f05a10]' : 'text-[#009b9f]'"
-                            class="text-4xl absolute top-4 right-6 font-serif">"</span>
+                            class="text-4xl absolute top-4 right-6">"</span>
                         <p class="text-gray-600 text-sm italic mb-6 relative z-10 flex-1 leading-relaxed">
                             "{{item.text}}"</p>
 
@@ -56,7 +56,7 @@
     <div class="text-center mt-16">
         <a href="https://wa.me/+5511993502798?text=Gostaria%20de%20obter%20mais%20detalhes%20sobre%20as%20solu%C3%A7%C3%B5es%20oferecidas%20pela%20RC4VC."
             target="_blank" rel="noopener noreferrer"
-            class="bg-[#f05a10] text-white font-bold py-4 px-8 text-lg lg:py-5 lg:px-9 lg:text-2xl rounded-full shadow-lg hover:bg-[#d64d0b] transition-colors">
+            class="inline-block bg-[#f05a10] text-white font-bold py-4 px-8 text-lg lg:py-5 lg:px-9 lg:text-2xl rounded-full shadow-lg hover:bg-[#d64d0b] transition-colors">
             Quero conhecer a plataforma
         </a>
     </div>
