--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -35,7 +35,7 @@
                 </p>
             </div>
 
-            <div class="flex flex-col items-center md:items-end lg:pl-20">
+            <div class="flex flex-col items-center md:items-start lg:pl-20">
 
                 <div class="flex gap-3 mb-6">
                     <a href="https://www.youtube.com/@rc4vc.oficial" target="_blank"
@@ -66,8 +66,7 @@
                     </a>
                 </div>
 
-                <p
-                    class="text-[10px] md:text-xs font-medium leading-snug max-w-lg opacity-90 text-center md:text-right">
+                <p class="text-[10px] md:text-xs font-medium leading-snug max-w-lg opacity-90 text-center md:text-left">
                     Os seguros de responsabilidade civil disponíveis neste site são intermediados pela Seguros4vc
                     Corretora de Seguros Ltda, inscritas no CNPJ sob o nº 46.038.955/0001-39, e credenciada com o
                     código pela SUSEP 222135332.
