--- a/src/app/diferenciais/diferenciais.html
+++ b/src/app/diferenciais/diferenciais.html
@@ -3,27 +3,28 @@
 
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-center mb-16 text-center lg:text-left">
             <div class="lg:-mt-40 lg:-mb-15">
-                <h2 class="text-5xl lg:text-[3.9rem] font-extrabold text-gray-700 leading-[1.1] tracking-tight">
-                    Tecnologia e <br> Assessoria em <br> Seguros
+                <h2 class="text-5xl lg:text-[3.9rem] font-extrabold text-gray-900 leading-[1.1] tracking-tight">
+                    Tecnologia e <br> Assessoria em Seguros
                 </h2>
-                <p class="mt-6 lg:text-[1.6rem] text-gray-700 leading-[1.3] text-lg md:text-xl font-medium">
+                <p class="mt-6 lg:text-[1.6rem] text-gray-900 leading-[1.3] text-lg md:text-xl font-medium">
                     A RC4VC une Assessoria com<br> Tecnologia, gerando valor de<br> ponta a ponta para o CORRETOR.
                 </p>
             </div>
-            <div class="lg:-mt-40 lg:-mb-15 flex items-center justify-center lg:justify-start w-full relative z-10">
+            <div
+                class="lg:-mt-40 lg:-mb-15 flex items-center justify-center lg:justify-start w-full relative z-10 lg:-ml-20">
                 <img src="imgs/notebook-2.png" alt="Notebook Tecnologia"
-                    class="w-full max-w-md md:max-w-lg lg:w-[130%] lg:max-w-none h-auto drop-shadow-2xl transform hover:-translate-y-2 transition-transform duration-500">
+                    class="w-full max-w-md md:max-w-lg lg:w-[135%] lg:max-w-none h-auto drop-shadow-2xl transform hover:-translate-y-2 transition-transform duration-500">
             </div>
         </div>
 
-        <div class="flex justify-center mb-10 mt-12">
+        <div class="flex justify-center mb-10 mt-12  md:mb-10 md:-mt-10  lg:mb-33 xl:-mt-23">
             <span
-                class="bg-[#ff6a13] text-white font-extrabold px-12 py-3.5 rounded-2xl text-[1.4rem] tracking-wide shadow-[0_10px_25px_rgba(255,106,19,0.4)]">
+                class="z-40  bg-[#ff6a13] text-white font-extrabold px-12 py-3.5 w-90 h-18 xl:w-120 xl:h-25 flex items-center justify-center text-center rounded-2xl text-[1.5rem] xl:text-[2.1rem]  tracking-wide shadow-[0_10px_25px_rgba(255,106,19,0.4)]">
                 TECNOLOGIA
             </span>
         </div>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-20">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-20 lg:-mt-23">
             @for (tec of tecnologias; track tec.titulo) {
             <div
                 class="bg-white rounded-[2rem] p-6 flex items-center justify-start md:justify-center gap-4 shadow-[0_10px_30px_rgba(0,0,0,0.06)] hover:-translate-y-1 transition-transform">
@@ -38,7 +39,7 @@
 
         <div class="flex justify-center mb-10">
             <span
-                class="bg-[#009b9f] text-white font-extrabold px-12 py-3.5 rounded-2xl text-[1.4rem] tracking-wide shadow-[0_10px_25px_rgba(0,155,159,0.4)]">
+                class="bg-[#009b9f] text-white font-extrabold px-12 py-3.5 w-90 h-18 xl:w-120 xl:h-25 flex items-center justify-center text-center rounded-2xl text-[1.4rem] xl:text-[1.6rem] tracking-wide shadow-[0_10px_25px_rgba(0,155,159,0.4)]">
                 ASSESSORIA EM SEGUROS
             </span>
         </div>
