--- a/src/app/dores/dores.html
+++ b/src/app/dores/dores.html
@@ -8,33 +8,33 @@
         <img src="imgs/homem-frustrado.png" alt="Homem Frustrado"
             class="w-full max-w-xl h-auto mx-auto mb-8 z-10 relative  md:absolute md:bottom-0 md:left-1/2 md:-translate-x-1/2 md:mb-0 md:w-auto md:h-auto md:max-h-[750px] lg:max-h-[850px]">
         <div
-            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-bold text-gray-700 border border-gray-100 z-20 md:absolute md:top-10 md:left-4 lg:left-10">
-            Dificuldade de acesso e cadastro nas seguradoras
+            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-medium text-gray-700 border border-gray-100 z-20 md:absolute md:top-10 md:left-4 lg:left-10">
+            Dificuldade de acesso e cadastro em <span class="font-extrabold">todas as seguradoras</span>
         </div>
 
         <div
-            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-bold text-gray-700 border border-gray-100 z-20 md:absolute md:top-1/2 md:-translate-y-1/2 md:-left-4 lg:left-0">
-            Lentidão para cotar em seguradora por seguradora
+            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-medium text-gray-700 border border-gray-100 z-20 md:absolute md:top-1/2 md:-translate-y-1/2 md:-left-4 lg:left-0">
+            <span class="font-extrabold">Lentidão</span> para cotar em seguradora por seguradora
         </div>
 
         <div
-            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-bold text-gray-700 border border-gray-100 z-20 md:absolute md:bottom-20 md:left-4 lg:left-10">
-            Estudar as condições gerais de cada companhia
+            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-medium text-gray-700 border border-gray-100 z-20 md:absolute md:bottom-20 md:left-4 lg:left-10">
+            <span class="font-extrabold">Estudar as condições gerais</span> de cada companhia
         </div>
 
         <div
-            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-bold text-gray-700 border border-gray-100 z-20 md:absolute md:top-16 md:right-4 lg:right-10">
-            Meu backoffice não conhece o fluxo do RCP
+            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-medium text-gray-700 border border-gray-100 z-20 md:absolute md:top-16 md:right-4 lg:right-10">
+            Meu backoffice <span class="font-extrabold">não conhece o fluxo do RCP</span>
         </div>
 
         <div
-            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-bold text-gray-700 border border-gray-100 z-20 md:absolute md:top-1/2 md:-translate-y-1/2 md:-right-4 lg:right-0">
-            A seguradora não me fornece treinamento
+            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-medium text-gray-700 border border-gray-100 z-20 md:absolute md:top-1/2 md:-translate-y-1/2 md:-right-4 lg:right-0">
+            A seguradora <span class="font-extrabold">não me fornece treinamento</span>
         </div>
 
         <div
-            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-bold text-gray-700 border border-gray-100 z-20 md:absolute md:bottom-12 md:right-4 lg:right-10">
-            Entender as diferenças de coberturas entre seguradoras
+            class="w-full max-w-sm md:max-w-none md:w-56 bg-white p-5 rounded-2xl shadow-lg text-sm font-medium text-gray-700 border border-gray-100 z-20 md:absolute md:bottom-12 md:right-4 lg:right-10">
+            Entender as <span class="font-extrabold">diferenças de coberturas</span> entre as seguradoras
         </div>
 
     </div>
