--- a/src/app/banner/banner.html
+++ b/src/app/banner/banner.html
@@ -1,5 +1,5 @@
 <section
-    class="pt-20 pb-10 px-8 md:px-16 bg-gradient-to-br from-[#fdfbf9] via-white to-[#fdf8f4] rounded-b-[3rem] shadow-[0_20px_50px_-12px_rgba(0,0,0,0.08)] relative z-40 mb-10 border-b border-gray-100 overflow-hidden flex items-center">
+    class="pt-20 pb-10 px-8 md:px-16 bg-gradient-to-br from-[#fdfbf9] via-white to-[#fdf8f4] rounded-b-[3rem] shadow-[0_35px_60px_-15px_rgba(0,0,0,0.15)] relative z-40 overflow-hidden flex items-center">
 
     <img src="imgs/background-lateral.png"
         class="hidden lg:block absolute right-0 top-0 h-full w-auto object-cover object-right z-0 opacity-80 pointer-events-none"
