--- a/src/app/depoimentos/depoimentos.html
+++ b/src/app/depoimentos/depoimentos.html
@@ -1,4 +1,4 @@
-<section class="pt-8 pb-24 px-8 bg-gradient-to-b from-white to-[#eaf6f7] text-center">
+<section class="pt-8 pb-24 px-8 bg-gradient-to-bl from-[#ffffff] via-[#ffffff] via-65% to-[#4dd0e1] text-center">
 
     <h2 class="text-4xl md:text-5xl font-extrabold text-gray-900 mb-16 tracking-tight leading-tight">
         Depoimentos de quem já <br> se beneficiou da <span class="text-[#008e90]">RC<span
