--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="bg-[#eaf6f7] pt-10">
+<div class="bg-transparent -mt-9 relative z-30">
     <footer
         class="bg-[#f05a10] text-white rounded-t-[3rem] px-8 py-16 md:px-16 md:py-20 relative overflow-hidden shadow-[0_-15px_40px_rgba(0,0,0,0.15)]">
 
