--- a/src/app/oportunidade/oportunidade.html
+++ b/src/app/oportunidade/oportunidade.html
@@ -1,5 +1,5 @@
 <section id="oportunidade"
-    class="pt-32 pb-20 px-8 md:px-16 bg-gradient-to-b from-[#f0fdff] via-[#fae6d8] via-20% to-[#fae6d8] -mt-20 relative z-0">
+    class="pt-32 pb-20 px-8 md:px-16 bg-gradient-to-b  via-[#ffffff] via-10% to-[#f2e7d5] -mt-20 relative z-0">
     <h2 class="text-3xl md:text-4xl font-extrabold text-center text-gray-900 mb-16">
         Porque o RC Profissional é <br> um <span class="text-[#008e90]">OCEANO AZUL</span>?
     </h2>
